--- a/public/message.html
+++ b/public/message.html
@@ -21,6 +21,39 @@
 					</div> -->
 				<!-- </li> -->
 				<!-- <li><div class="userMessages">This is a chat</div></li> -->
+
+				<!-- <li class="store-items">
+					<div class="container">
+						<div class="banner-wrapper">
+							<div class="banner-image"></div>
+							<h1 class="image-text"></h1>
+							<p class="image-desc"></p>
+						</div>
+						<div class="button-wrapper">
+							<button class="btn fill">BUY NOW</button>
+						</div>
+					</div>
+					<div class="container">
+						<div class="banner-wrapper">
+							<div class="banner-image"></div>
+							<h1 class="image-text"></h1>
+							<p class="image-desc"></p>
+						</div>
+						<div class="button-wrapper">
+							<button class="btn fill">BUY NOW</button>
+						</div>
+					</div>
+					<div class="container">
+						<div class="banner-wrapper">
+							<div class="banner-image"></div>
+							<h1 class="image-text"></h1>
+							<p class="image-desc"></p>
+						</div>
+						<div class="button-wrapper">
+							<button class="btn fill">BUY NOW</button>
+						</div>
+					</div>
+				</li> -->
 			</ul>
 
 			<div class="chat-form chat-window">
