--- a/public/message.html
+++ b/public/message.html
@@ -14,47 +14,7 @@
 
 	<body class="welcome-body">
 		<div class="wrapper">
-			<ul class="chat-thread">
-				<!-- <li> -->
-				<!-- <div class="notification">
-						<span class="notify">This is a notification </span>
-					</div> -->
-				<!-- </li> -->
-				<!-- <li><div class="userMessages">This is a chat</div></li> -->
-
-				<!-- <li class="store-items">
-					<div class="container">
-						<div class="banner-wrapper">
-							<div class="banner-image"></div>
-							<h1 class="image-text"></h1>
-							<p class="image-desc"></p>
-						</div>
-						<div class="button-wrapper">
-							<button class="btn fill">BUY NOW</button>
-						</div>
-					</div>
-					<div class="container">
-						<div class="banner-wrapper">
-							<div class="banner-image"></div>
-							<h1 class="image-text"></h1>
-							<p class="image-desc"></p>
-						</div>
-						<div class="button-wrapper">
-							<button class="btn fill">BUY NOW</button>
-						</div>
-					</div>
-					<div class="container">
-						<div class="banner-wrapper">
-							<div class="banner-image"></div>
-							<h1 class="image-text"></h1>
-							<p class="image-desc"></p>
-						</div>
-						<div class="button-wrapper">
-							<button class="btn fill">BUY NOW</button>
-						</div>
-					</div>
-				</li> -->
-			</ul>
+			<ul class="chat-thread"></ul>
 
 			<div class="chat-form chat-window">
 				<input
