--- a/public/cart.html
+++ b/public/cart.html
@@ -13,7 +13,7 @@
 		/>
 	</head>
 	<body>
-		<section class="h-100 h-custom" style="background-color: #d2c9ff">
+		<section class="h-100 h-custom">
 			<div class="container py-5 h-100">
 				<div
 					class="row d-flex justify-content-center align-items-center h-100"
@@ -37,67 +37,17 @@
 											</div>
 											<hr class="my-4" />
 
-											<div class="cart-Items">
-												<!-- <div
-													class="row mb-4 d-flex justify-content-between align-items-center"
-												>
-													<div class="col-md-2 col-lg-2 col-xl-2">
-														<img
-															src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img7.webp"
-															class="img-fluid rounded-3"
-															alt="Cotton T-shirt"
-														/>
-													</div>
-													<div class="col-md-3 col-lg-3 col-xl-3">
-														<h6 class="text-muted">Shirt</h6>
-														<h6 class="text-black mb-0">
-															Cotton T-shirt
-														</h6>
-													</div>
-													<div
-														class="col-md-3 col-lg-3 col-xl-2 d-flex"
-													>
-														<button class="btn btn-link px-2">
-															<i class="fas fa-minus"></i>
-														</button>
-
-														<input
-															id="form1"
-															min="0"
-															name="quantity"
-															value="1"
-															type="number"
-															class="form-control form-control-sm"
-														/>
-
-														<button class="btn btn-link px-2">
-															<i class="fas fa-plus"></i>
-														</button>
-													</div>
-													<div
-														class="col-md-3 col-lg-2 col-xl-2 offset-lg-1"
-													>
-														<h6 class="mb-0">€ 44.00</h6>
-													</div>
-													<div
-														class="col-md-1 col-lg-1 col-xl-1 text-end"
-													>
-														<a href="#!" class="text-muted"
-															><i class="fas fa-times"></i
-														></a>
-													</div>
-												</div> -->
-											</div>
+											<div class="cart-Items"></div>
 
 											<hr class="my-4" />
 
 											<div class="pt-5">
 												<h6 class="mb-0">
-													<a href="#!" class="text-body"
+													<a href="./message.html" class="text-body"
 														><i
 															class="fas fa-long-arrow-alt-left me-2"
 														></i
-														>Back to shop</a
+														>Back to Assistant</a
 													>
 												</h6>
 											</div>
@@ -115,38 +65,6 @@
 												<h5>€ 132.00</h5>
 											</div>
 
-											<h5 class="text-uppercase mb-3">Shipping</h5>
-
-											<div class="mb-4 pb-2">
-												<select class="select">
-													<option value="1">
-														Standard-Delivery- €5.00
-													</option>
-													<option value="2">Two</option>
-													<option value="3">Three</option>
-													<option value="4">Four</option>
-												</select>
-											</div>
-
-											<h5 class="text-uppercase mb-3">Give code</h5>
-
-											<div class="mb-5">
-												<div class="form-outline">
-													<input
-														type="text"
-														id="form3Examplea2"
-														class="form-control form-control-lg"
-													/>
-													<label
-														class="form-label"
-														for="form3Examplea2"
-														>Enter your code</label
-													>
-												</div>
-											</div>
-
-											<hr class="my-4" />
-
 											<div
 												class="d-flex justify-content-between mb-5"
 											>
@@ -159,7 +77,7 @@
 												class="btn btn-dark btn-block btn-lg"
 												data-mdb-ripple-color="dark"
 											>
-												Register
+												Check Out
 											</button>
 										</div>
 									</div>
