--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,8 @@
 					<div class="form-holder">
 						<span class="lnr lnr-lock"></span>
 						<a href="./signup.html" class="signup-image-link"
-							>Create an account</a
+							>Get Access</a
 						>
-					</div>
-					<div class="form-holder">
-						<a href="./login.html" class="signup-image-link">
-							<span class="lnr lnr-lock">I am already member</span>
-						</a>
 					</div>
 					<button>
 						<span>Here to serve</span>
