--- a/public/message.html
+++ b/public/message.html
@@ -17,6 +17,13 @@
 			<ul class="chat-thread"></ul>
 
 			<div class="chat-form chat-window">
+				<h6 class="">
+					<a href="./cart.html" class="cart-re"
+						><i class="fas fa-long-arrow-alt-left me-2"></i>Go To
+						Cart</a
+					>
+				</h6>
+
 				<input
 					placeholder="Enter Chat"
 					class="chat-window-message"
