--- a/public/message.html
+++ b/public/message.html
@@ -17,12 +17,11 @@
 			<ul class="chat-thread"></ul>
 
 			<div class="chat-form chat-window">
-				<h6 class="">
+				<button class="go_to_cart">
 					<a href="./cart.html" class="cart-re"
-						><i class="fas fa-long-arrow-alt-left me-2"></i>Go To
-						Cart</a
-					>
-				</h6>
+						><i class="fas fa-long-arrow-alt-left me-2"></i>Cart 🛒
+					</a>
+				</button>
 
 				<input
 					placeholder="Enter Chat"
