--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,17 @@
 
 					<div class="form-holder">
 						<span class="lnr lnr-lock"></span>
+						<input
+							type="text"
+							required
+							class="form-control"
+							placeholder="Username"
+						/>
+					</div>
+					<button>
 						<a href="./signup.html" class="signup-image-link"
 							>Get Access</a
 						>
-					</div>
-					<button>
-						<span>Here to serve</span>
 					</button>
 				</form>
 			</div>
