--- a/public/cart.html
+++ b/public/cart.html
@@ -43,7 +43,7 @@
 
 											<div class="pt-5">
 												<h6 class="mb-0">
-													<a href="./message.html" class="text-body"
+													<a href="./index.html" class="text-body"
 														><i
 															class="fas fa-long-arrow-alt-left me-2"
 														></i
